add home-manager config and top level targets for build and switch

--- a/make/Makefile
+++ b/make/Makefile
@@ -1,9 +1,15 @@
 .PHONY: dotfiles
-dotfiles:
-	@$(MAKE) -C dotfiles dotfiles
+stow:
+	@$(MAKE) -C dotfiles stow
 
 pull:
 	cd dotfiles && git pull
+
+build:
+	home-manager build
+
+switch:
+	home-manager switch
 
 .ssh/id_rsa.pub .ssh/id_rsa:
 	ssh-keygen
