Revert "move to ~/.dotfiles"
This reverts commit 4831cf427747d006fd4f1a89c7663e50bebfdde1.

--- a/make/Makefile
+++ b/make/Makefile
@@ -1,11 +1,9 @@
+.PHONY: dotfiles
 stow:
-	@$(MAKE) -C .dotfiles stow
+	@$(MAKE) -C dotfiles stow
 
 pull:
-	cd .dotfiles && git pull
-
-push:
-	cd .dotfiles && git push
+	cd dotfiles && git pull
 
 build:
 	home-manager build
