make: add target to install selected emacs packages

--- a/make/Makefile
+++ b/make/Makefile
@@ -53,3 +53,7 @@ downloads:
 
 xorg-caps:
 	setxkbmap -option caps:ctrl_modifier
+
+# run to make sure all packages are installed
+emacs-package-install:
+	emacs --batch --load .emacs --eval '(package-install-selected-packages)'
