remove path to cat for PAGER
/bin/cat doesn't work on NixOS

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -5,7 +5,7 @@
 	name = Ryan Yeske
 [core]
 	excludesfile = ~/.gitignore_global
-        pager = /bin/cat
+        pager = cat
 [alias]
         lol = log --pretty=oneline --graph --decorate
         lastweek  = log --since '7 days' --oneline --pretty=format:'%h %an - %s (%cr)' --committer='Ryan Yeske'
