--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,5 +14,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
+    - name: install deps
+      run: sudo apt-get install -y stow
+
     - name: stow
       run: make stow
