--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -20,8 +20,8 @@ jobs:
     - name: stow
       run: make stow
 
-    - name: pwd
-      run: pwd
+    - name: tree
+      run: ls -lR /home/runner
       
     - name: emacs
       run: emacs --batch --load ./.emacs --eval '(kill-emacs)'
