--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: install deps
-      run: sudo apt-get install -y stow emacs
+      run: sudo apt-get install -y stow emacs aspell
 
     - name: stow
       run: make stow
