--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,9 @@
 set-option -g prefix C-t
 unbind-key C-b
 bind-key C-t send-prefix
+
+set-option -g detach-on-destroy off
+
+bind R source-file ~/.tmux.conf
+
+bind f run-shell "tmux neww ~/dotfiles/bin/tmux-sessionizer.sh"
