tmux: Add mouse support

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,8 @@ set-option -g prefix C-t
 unbind-key C-b
 bind-key C-t send-prefix
 
+set -g mouse on
+
 set-option -g detach-on-destroy off
 
 bind R source-file ~/.tmux.conf
