--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,7 +2,7 @@ set-option -g prefix C-t
 unbind-key C-b
 bind-key C-t send-prefix
 
-set -g mouse on
+#set -g mouse on
 
 set-option -g detach-on-destroy off
 
