tmux status bar coloured per hostname

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,3 +9,7 @@ set-option -g detach-on-destroy off
 bind R source-file ~/.tmux.conf
 
 bind f run-shell "tmux neww ~/dotfiles/bin/tmux-sessionizer.sh"
+
+if-shell "[ `hostname` = 'trout' ]" 'set status-style "bg=blue fg=white"'
+if-shell "[ `hostname` = 'sturgeon' ]" 'set status-style "bg=cyan fg=black"'
+
