--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,6 +10,5 @@ bind R source-file ~/.tmux.conf
 
 bind f run-shell "tmux neww ~/dotfiles/bin/tmux-sessionizer.sh"
 
-if-shell "[ `hostname` = 'trout' ]" 'set status-style "bg=blue fg=white"'
-if-shell "[ `hostname` = 'sturgeon' ]" 'set status-style "bg=cyan fg=black"'
-
+#if-shell "[ `hostname` = 'trout' ]" 'set status-style "bg=blue fg=white"'
+#if-shell "[ `hostname` = 'sturgeon' ]" 'set status-style "bg=cyan fg=black"'
