--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,6 +5,7 @@ bind-key C-t send-prefix
 #set -g mouse on
 
 set-option -g detach-on-destroy off
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 bind R source-file ~/.tmux.conf
 
