Tmux background color changed

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,5 +11,7 @@ bind R source-file ~/.tmux.conf
 
 bind f run-shell "tmux neww ~/dotfiles/bin/tmux-sessionizer.sh"
 
+set status-style "bg=black fg=yellow"
+
 #if-shell "[ `hostname` = 'trout' ]" 'set status-style "bg=blue fg=white"'
 #if-shell "[ `hostname` = 'sturgeon' ]" 'set status-style "bg=cyan fg=black"'
