Workaround for tailscale dns issue coming back from suspend

--- a/make/Makefile
+++ b/make/Makefile
@@ -72,3 +72,7 @@ mlbv-tor-vpn:
 	-rm .config/mlbv/session
 	nordvpn connect us8945
 	mlbv -t tor
+
+# https://github.com/tailscale/tailscale/issues/8223#issuecomment-1871678581
+dns:
+	sudo systemctl restart tailscaled systemd-resolved
