Git signing key path not hardcoded

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -28,7 +28,7 @@
 [gpg]
 	format = ssh
 [user]
-	signingkey = /home/rcy/.ssh/id_rsa.pub
+	signingkey = ~/.ssh/id_rsa.pub
 [status]
 	showUntrackedFiles = all
 [github]
